// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checked radio input 1`] = `
"<b-input-radio name=\\"radio\\" value=\\"radio 2\\" checked=\\"\\">
    <label>
        <input value=\\"radio 2\\" name=\\"radio\\" type=\\"radio\\" checked=\\"\\">
        <b-input-radio--icon></b-input-radio--icon>
        <slot>radio button</slot>
    </label>
</b-input-radio>"
`;

exports[`Unchecked radio input 1`] = `
"<b-input-radio name=\\"radio\\" value=\\"radio 1\\">
    <label>
        <input value=\\"radio 1\\" name=\\"radio\\" type=\\"radio\\">
        <b-input-radio--icon></b-input-radio--icon>
        <slot></slot>
    </label>
</b-input-radio>"
`;
